; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_bsf.c_av_bsf_list_append2.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_bsf.c_av_bsf_list_append2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AVERROR_BSF_NOT_FOUND = common dso_local global i32 0, align 4
@AV_OPT_SEARCH_CHILDREN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @av_bsf_list_append2(i32* %0, i8* %1, i32** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32** %2, i32*** %7, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = call i32* @av_bsf_get_by_name(i8* %11)
  store i32* %12, i32** %9, align 8
  %13 = load i32*, i32** %9, align 8
  %14 = icmp ne i32* %13, null
  br i1 %14, label %17, label %15

15:                                               ; preds = %3
  %16 = load i32, i32* @AVERROR_BSF_NOT_FOUND, align 4
  store i32 %16, i32* %4, align 4
  br label %47

17:                                               ; preds = %3
  %18 = load i32*, i32** %9, align 8
  %19 = call i32 @av_bsf_alloc(i32* %18, i32** %10)
  store i32 %19, i32* %8, align 4
  %20 = load i32, i32* %8, align 4
  %21 = icmp slt i32 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %17
  %23 = load i32, i32* %8, align 4
  store i32 %23, i32* %4, align 4
  br label %47

24:                                               ; preds = %17
  %25 = load i32**, i32*** %7, align 8
  %26 = icmp ne i32** %25, null
  br i1 %26, label %27, label %36

27:                                               ; preds = %24
  %28 = load i32*, i32** %10, align 8
  %29 = load i32**, i32*** %7, align 8
  %30 = load i32, i32* @AV_OPT_SEARCH_CHILDREN, align 4
  %31 = call i32 @av_opt_set_dict2(i32* %28, i32** %29, i32 %30)
  store i32 %31, i32* %8, align 4
  %32 = load i32, i32* %8, align 4
  %33 = icmp slt i32 %32, 0
  br i1 %33, label %34, label %35

34:                                               ; preds = %27
  br label %40

35:                                               ; preds = %27
  br label %36

36:                                               ; preds = %35, %24
  %37 = load i32*, i32** %5, align 8
  %38 = load i32*, i32** %10, align 8
  %39 = call i32 @av_bsf_list_append(i32* %37, i32* %38)
  store i32 %39, i32* %8, align 4
  br label %40

40:                                               ; preds = %36, %34
  %41 = load i32, i32* %8, align 4
  %42 = icmp slt i32 %41, 0
  br i1 %42, label %43, label %45

43:                                               ; preds = %40
  %44 = call i32 @av_bsf_free(i32** %10)
  br label %45

45:                                               ; preds = %43, %40
  %46 = load i32, i32* %8, align 4
  store i32 %46, i32* %4, align 4
  br label %47

47:                                               ; preds = %45, %22, %15
  %48 = load i32, i32* %4, align 4
  ret i32 %48
}

declare dso_local i32* @av_bsf_get_by_name(i8*) #1

declare dso_local i32 @av_bsf_alloc(i32*, i32**) #1

declare dso_local i32 @av_opt_set_dict2(i32*, i32**, i32) #1

declare dso_local i32 @av_bsf_list_append(i32*, i32*) #1

declare dso_local i32 @av_bsf_free(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
